[gd_scene load_steps=6 format=3 uid="uid://c8wrv88j2xsja"]

[ext_resource type="Theme" uid="uid://bh6uh8a3ed4q" path="res://Assets/Themes/main_theme.tres" id="1_0bpvl"]
[ext_resource type="Script" path="res://Scenes/PlayerUI/Cards/sphinx_card.gd" id="1_rygjt"]
[ext_resource type="Texture2D" uid="uid://d108vdmpsmnik" path="res://Assets/Icons/esfinge.png" id="4_q1fuy"]

[sub_resource type="Animation" id="Animation_olivh"]
resource_name = "flip"
length = 2.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Front:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1.8, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.8, 2.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(320, 64), Vector2(96, 64)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Back:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.2, 1.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Back:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1.1, 1.2, 1.8),
"transitions": PackedFloat32Array(0.5, 2, 1, 1),
"update": 0,
"values": [Vector2(96, 640), Vector2(96, 64), Vector2(96, 64), Vector2(320, 64)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.9, 2.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(192, 72), Vector2(192, 72), Vector2(192, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureRect:visible")
tracks/5/interp = 0
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 2, 2.1, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, false, true, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nkvsd"]
_data = {
"flip": SubResource("Animation_olivh")
}

[node name="SphinxCard" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_0bpvl")
script = ExtResource("1_rygjt")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
texture_filter = 2
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.0
offset_top = 72.0
offset_right = 128.0
offset_bottom = 144.0
grow_horizontal = 2
texture = ExtResource("4_q1fuy")
expand_mode = 1
stretch_mode = 5

[node name="Front" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 320.0
offset_top = 64.0
offset_right = 128.003
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
theme_type_variation = &"Card"

[node name="MarginContainer" type="MarginContainer" parent="Front"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Front/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="Front/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"Pergunta"

[node name="MarginContainer" type="MarginContainer" parent="Front/MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Pergunta" type="RichTextLabel" parent="Front/MarginContainer/VBoxContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "[PERGUNTA-AQUI]"

[node name="GridContainer" type="GridContainer" parent="Front/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 16
columns = 2

[node name="Answer1" type="Button" parent="Front/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
text = "A."
alignment = 0
text_overrun_behavior = 3
clip_text = true

[node name="Answer2" type="Button" parent="Front/MarginContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 8
text = "B."
alignment = 0
text_overrun_behavior = 3
clip_text = true

[node name="Back" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 96.0
offset_top = 640.0
offset_right = -95.9991
offset_bottom = 512.0
grow_horizontal = 2
grow_vertical = 2
theme_type_variation = &"Card"

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="Back"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="Back/AspectRatioContainer"]
texture_filter = 2
layout_mode = 2
texture = ExtResource("4_q1fuy")
expand_mode = 1
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_nkvsd")
}
